--- a/src/app/login/feature/login.component.css
+++ b/src/app/login/feature/login.component.css
@@ -1,156 +1,169 @@
 button.login {
-    padding: 0.5rem 1rem;
-    font-family: 'Poppins', sans-serif;
-    font-weight: 600;
-    font-size: 20px;
-    height: 100px;
-    width: 200px;
-    border-radius: 0.1rem; 
-    border: 2px solid #b04c7a;
-    background-color: #0095a0; 
-    color: #f5d5e4; text-transform: 
-    uppercase; cursor: pointer; 
-    transition: 150ms ease-in-out;
-    transform: skewX(-15deg);
-    box-shadow: 10px 10px 0 0 #FBC638;
+  padding: 1rem 1.5rem;
+  font-family: "Poppins", sans-serif;
+  font-weight: 600;
+  font-size: 20px;
+  border-radius: 0.1rem;
+  border: none;
+  background-color: #0095a0;
+  color: #f5d5e4;
+  text-transform: uppercase;
+  cursor: pointer;
+  transition: 150ms ease-in-out;
+  transform: skewX(-15deg);
+  box-shadow: 10px 10px 0 0 #004f55;
 }
 
 button.login:hover {
-    transition: 0.5s;
-    transform: skewX(-15deg);
-    box-shadow: 17px 17px 0 0 #FBC638;
+  transition: 0.5s;
+  transform: skewX(-15deg);
+  box-shadow: 17px 17px 0 0 #004f55;
 }
 
- button.login:active {
-    transform: scale(0.95); 
-    box-shadow: none;
-} 
+button.login:active {
+  transform: scale(0.95);
+  box-shadow: none;
+}
 
 .button-container {
-    position: fixed; 
-    left: 50%; 
-    top:50%; 
-    transform: translate(-50%, -50%); 
-    z-index: 999
-} 
+  margin: 20px;
+  z-index: 999;
+  text-align: center;
+}
 
-.animation-container {
-    background: linear-gradient(to left, #7600bc, #a000c8 ); 
-    width: 100%; 
-    height: 100vh;
+.background-overlay {
+  width: 100%;
+  height: 50rem;
+  background: linear-gradient(135deg, #b04c7a, #f1576a);
+  color: white;
+  font-family: Arial, Helvetica, sans-serif;
+  border-bottom-left-radius: 50%;
+  border-bottom-right-radius: 50%;
+  margin-left: -8px;
+  margin-top: -8px;
+  position: relative;
+}
+
+.flex-container {
+  display: flex;
+  color: white;
+  flex-direction: column;
+  text-align: center;
+  align-items: center;
+  position: absolute;
+  top: 90px;
+  left: 0;
+  right: 0;
+}
+
+p {
+  width: 50ch;
 }
 
 .shapes {
-    position: absolute; 
-    top: 0; 
-    left: 0; 
-    width: 100%; 
-    height: 100%; 
-    overflow: hidden
-}
-@keyframes animate { 
-    0% { 
-        opacity: .5; 
-        border-radius: 0; 
-        transform: translateY(0) rotate(0deg);
-    } 100% {
-        opacity: 0; 
-        border-radius: 50%; 
-        transform: translateY(-1000px) rotate(720deg);}
+  position: absolute;
+  top: 40%;
+  left: 0;
+  width: 100%;
+  height: 60%;
+  overflow: hidden;
 }
 
-.shapes div{
-    position: absolute; 
-    display: block; 
-    list-style: none; 
-    width: 20px; 
-    height:20px; 
-    background: rgba(255, 255, 255, 0.2); 
-    bottom: -150px; 
-    animation: animate 25s linear infinite
+@keyframes animate {
+  0% {
+    opacity: 0.5;
+    border-radius: 50%;
+    transform: translateY(0);
+  }
+  100% {
+    opacity: 0;
+    border-radius: 70%;
+    transform: translateY(-1000px);
+  }
 }
 
-.shapes div:nth-child(1) { 
-    left: 25%; 
-    width: 80px; 
-    height: 80px; 
-    animation-delay: 0s;
-    border: 2px solid yellow;
+.shapes div {
+  position: absolute;
+  display: block;
+  list-style: none;
+  width: 20px;
+  height: 20px;
+  background: linear-gradient(135deg, #b04c7a, #f1576a);
+  bottom: -150px;
+  animation: animate 25s linear infinite;
+}
+
+.shapes div:nth-child(1) {
+  left: 25%;
+  width: 80px;
+  height: 80px;
+  animation-delay: 0s;
 }
 
 .shapes div:nth-child(2) {
-    left: 10%; 
-    width: 20px; 
-    height: 20px; 
-    animation-delay: 12s;
-    animation-duration: 12s;
-    border: 2px solid yellow;
+  left: 10%;
+  width: 20px;
+  height: 20px;
+  animation-delay: 12s;
+  animation-duration: 12s;
 }
 
 .shapes div:nth-child(3) {
-    left: 70%; 
-    width: 20px; 
-    height: 20px; 
-    animation-delay: 4s;
-    border: 2px solid yellow;
+  left: 70%;
+  width: 20px;
+  height: 20px;
+  animation-delay: 4s;
 }
 
 .shapes div:nth-child(4) {
-    left: 40%; 
-    width: 60px; 
-    height: 60px; 
-    animation-delay: 0s;
-    animation-duration: 18s;
-    border: 2px solid yellow;
+  left: 40%;
+  width: 60px;
+  height: 60px;
+  animation-delay: 0s;
+  animation-duration: 18s;
 }
 
 .shapes div:nth-child(5) {
-    left: 65%; 
-    width: 20px; 
-    height: 20px; 
-    animation-delay: 0s;
-    border: 2px solid yellow;
+  left: 65%;
+  width: 20px;
+  height: 20px;
+  animation-delay: 0s;
 }
 
 .shapes div:nth-child(6) {
-    left: 75%; 
-    width: 110px; 
-    height: 110px; 
-    animation-delay: 3s;
-    border: 2px solid yellow;
+  left: 75%;
+  width: 110px;
+  height: 110px;
+  animation-delay: 3s;
 }
 
 .shapes div:nth-child(7) {
-    left: 35%; 
-    width: 150px; 
-    height: 150px; 
-    animation-delay: 2s;
-    border: 2px solid yellow;
+  left: 35%;
+  width: 150px;
+  height: 150px;
+  animation-delay: 2s;
 }
 
 .shapes div:nth-child(8) {
-    left: 45%; 
-    width: 25px; 
-    height: 25px; 
-    animation-delay: 15s;
-    animation-duration: 45s;
-    border: 2px solid yellow;
+  left: 45%;
+  width: 25px;
+  height: 25px;
+  animation-delay: 15s;
+  animation-duration: 45s;
 }
 
 .shapes div:nth-child(9) {
-    left: 20%; 
-    width: 15px; 
-    height: 15px; 
-    animation-delay: 2s;
-    animation-duration: 35s;
-    border: 2px solid yellow;
+  left: 20%;
+  width: 15px;
+  height: 15px;
+  animation-delay: 2s;
+  animation-duration: 35s;
 }
 
 .shapes div:nth-child(10) {
-    left: 85%; 
-    width: 120px; 
-    height: 120px; 
-    animation-delay: 0s;
-    animation-duration: 18s;
-    border: 2px solid yellow;
+  left: 85%;
+  width: 120px;
+  height: 120px;
+  animation-delay: 0s;
+  animation-duration: 18s;
 }
