--- a/src/app/login/feature/login.component.css
+++ b/src/app/login/feature/login.component.css
@@ -75,8 +75,10 @@ p {
     border-radius: 50%;
     transform: translateY(0);
   }
-  100% {
+  50% {
     opacity: 0;
+  }
+  100% {
     border-radius: 70%;
     transform: translateY(-1000px);
   }
