--- a/src/app/login/feature/login.component.css
+++ b/src/app/login/feature/login.component.css
@@ -34,14 +34,13 @@ button.login:active {
 .background-overlay {
   width: 100%;
   height: 50rem;
-  background: linear-gradient(135deg, #b04c7a, #f1576a);
+  background: linear-gradient(135deg, #c34da0, #e87cc8);
   color: white;
   font-family: Arial, Helvetica, sans-serif;
   border-bottom-left-radius: 50%;
   border-bottom-right-radius: 50%;
-  margin-left: -8px;
-  margin-top: -8px;
   position: relative;
+  box-shadow: 2px 2px 5px #c34da0;
 }
 
 .flex-container {
@@ -75,9 +74,6 @@ p {
     border-radius: 50%;
     transform: translateY(0);
   }
-  50% {
-    opacity: 0;
-  }
   100% {
     border-radius: 70%;
     transform: translateY(-1000px);
@@ -90,7 +86,7 @@ p {
   list-style: none;
   width: 20px;
   height: 20px;
-  background: linear-gradient(135deg, #b04c7a, #f1576a);
+  background: linear-gradient(135deg, #c34da0, #e87cc8);
   bottom: -150px;
   animation: animate 25s linear infinite;
 }
