--- a/src/styles.css
+++ b/src/styles.css
@@ -3,4 +3,8 @@ body {
   background: linear-gradient(to left, #7600bc, #a000c8);
   width: 100%;
   height: 100vh;
+  margin: 0;
 }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
