--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 body {
-  background: linear-gradient(to left, #7600bc, #a000c8);
+  background: linear-gradient(to bottom, #f2ebe9, #df998e);
   width: 100%;
   height: 100vh;
   margin: 0;
