--- a/src/styles.css
+++ b/src/styles.css
@@ -1,8 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
 body {
   background: linear-gradient(to bottom, #f2ebe9, #df998e);
-  width: 100%;
-  height: 100vh;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
   margin: 0;
 }
 
