--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -129,7 +129,7 @@ button.search:hover {
   }
 
   div.wrapper:hover {
-    background-color: rgba(235, 107, 64, .3);
+    background-color: rgba(68, 54, 93, .3);
     border-radius: 30px;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
   }
@@ -179,11 +179,13 @@ button.search:hover {
   }
 
   .progress-bar-inside {
-    background-color:#c38076;
+    background-color:#44365d;
     position: absolute;
     height: 5px;
     border-radius: 25px;
     
   }
 
-  
+  mat-icon {
+    color: #44365d;
+  }
