--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 body {
-  background: linear-gradient(to bottom, #fefcee, #e49fa2);
+  background: linear-gradient(to bottom, #a06277, #fefcee);
   background-repeat: no-repeat;
   background-attachment: fixed;
   margin: 0;
