--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -1,9 +1,9 @@
 ::-webkit-scrollbar {
   width: 10px;
 }
- 
+
 ::-webkit-scrollbar-thumb {
-  background: rgba(68, 54, 93, .3);
+  background: rgba(68, 54, 93, 0.3);
   border-radius: 10px;
   border: 2px solid white;
 }
@@ -13,7 +13,7 @@
 }
 
 ::-webkit-scrollbar-thumb:hover {
-  background: #44365d; 
+  background: #44365d;
 }
 
 .container {
@@ -73,122 +73,116 @@ button.search:hover {
 }
 
 .wrapper {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-auto-rows: 50px;
-    gap: 20px;
-  }
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-auto-rows: 50px;
+  gap: 20px;
+}
 
-  .box1 {
-    grid-column-start: 1;
-    grid-column-end: 2;
-    grid-row-start: 1;
-    grid-row-end: 3;
-    position: relative;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+.box1 {
+  grid-column-start: 1;
+  grid-column-end: 2;
+  grid-row-start: 1;
+  grid-row-end: 3;
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 
-  }
+.box2 {
+  grid-column-start: 2;
+  grid-column-end: 4;
+  grid-row-start: 1;
+  grid-row-end: 2;
+  position: relative;
+  display: flex;
+  align-items: end;
+}
 
-  .box2 {
-    grid-column-start: 2;
-    grid-column-end: 4;
-    grid-row-start: 1;
-    grid-row-end: 2;
-    position: relative;
-    display: flex;
-    align-items: end;
-  }
+.box3 {
+  grid-column-start: 2;
+  grid-column-end: 4;
+  grid-row-start: 2;
+  grid-row-end: 3;
+  position: relative;
+}
 
-  .box3 {
-    grid-column-start: 2;
-    grid-column-end: 4;
-    grid-row-start: 2;
-    grid-row-end: 3;
-    position: relative;
-  }
+.box4 {
+  grid-column-start: 4;
+  grid-column-end: 5;
+  grid-row-start: 1;
+  grid-row-end: 3;
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 
-  .box4 {
-    grid-column-start: 4;
-    grid-column-end: 5;
-    grid-row-start: 1;
-    grid-row-end: 3;
-    position: relative;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
+.play-button-small {
+  padding: 1rem;
+  border: none;
+  color: var(--color-accent);
+  outline: none;
+  background: transparent;
+}
 
-  .play-button-small {
-    padding: 15px;
-    padding: 15px;
-    border: none;
-    outline: none;
-    background: transparent;
-  }
+div.wrapper:hover {
+  background-color: var(--color-gray);
+  border-radius: 10px;
+}
 
-  div.wrapper:hover {
-    background-color: rgba(68, 54, 93, .3);
-    border-radius: 30px;
-    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-  }
+.play-button-small:hover {
+  cursor: pointer;
+}
 
-  .play-button-small:hover {
-    cursor: pointer;
-  }
+.play-button-large {
+  border: 2px solid transparent; /* Makes the button perfectly circle */
+  border-radius: 50%;
+  line-height: 1;
+  transform: scale(1.5);
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+}
 
-  .play-button-large {
-    transform: scale(1.5);
-    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-    border: 2px solid rgba(68, 54, 93, .3);
-  }
+.flex-container {
+  display: flex;
+}
 
-/* player bottom buttons */
-  .flex-container {
-    display: flex;
-  }
+.next_btn {
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  border: 2px solid transparent; /* Makes the button perfectly circle */
+}
 
-  .next_btn {
-    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-    border: 2px solid rgba(68, 54, 93, .3);
-  }
+.prev-btn {
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  border: 2px solid transparent; /* Makes the button perfectly circle */
+}
 
-  .prev-btn {
-    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-    border: 2px solid rgba(68, 54, 93, .3);
-  }
+.flex-container > button {
+  margin: 20px;
+  background-color: white;
+  border-radius: 50%;
+  padding: 10px;
+}
 
-  .flex-container > button {
-    margin: 20px;
-    background-color: white;
-    border-radius: 50%;
-    padding: 10px;
-  }
+.flex-container > button:hover {
+  cursor: pointer;
+}
 
-  .flex-container > button:hover{
-    cursor: pointer;
-  }
+.progress-bar {
+  background-color: white;
+  width: 20em;
+  height: 5px;
+  border-radius: 25px;
+  margin: 23px;
+  position: relative;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  /* border: 2px solid rgba(68, 54, 93, .3); */
+}
 
-  .progress-bar {
-    background-color: white;
-    width: 20em;
-    height: 5px;
-    border-radius: 25px;
-    margin: 23px;
-    position: relative;
-    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-    /* border: 2px solid rgba(68, 54, 93, .3); */
-  }
-
-  .progress-bar-inside {
-    background-color:#44365d;
-    position: absolute;
-    height: 5px;
-    border-radius: 25px;
-    
-  }
-
-  mat-icon {
-    color: #44365d;
-  }
+.progress-bar-inside {
+  background-color: #44365d;
+  position: absolute;
+  height: 5px;
+  border-radius: 25px;
+}
