fixed styling since breaking down the home component

--- a/src/app/home/feature/home.component.css
+++ b/src/app/home/feature/home.component.css
@@ -1,187 +1,10 @@
-::-webkit-scrollbar {
-  width: 10px;
-}
-
-::-webkit-scrollbar-thumb {
-  background: rgba(68, 54, 93, 0.3);
-  border-radius: 10px;
-  border: 2px solid white;
-}
-
-::-webkit-scrollbar-track {
-  margin: 10px;
-}
-
-::-webkit-scrollbar-thumb:hover {
-  background: #44365d;
-}
-
 .container {
   padding: 15px;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
-/* search bar */
-.search-bar-container {
+
+.flex-item {
   width: 60%;
-  height: 10px;
-  background-color: white;
-  border-radius: 30px;
-  display: flex;
-  align-items: center;
-  padding: 20px;
-  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-}
-.search-bar-container > i {
-  font-size: 20px;
-  color: #777;
-}
-input.search {
-  width: 80%;
-}
-
-.search-bar-container > input {
-  flex: 1;
-  height: none border;
-  border: none;
-  outline: none;
-  font-size: 18px;
-  padding-left: 10px;
-}
-
-button.search {
-  border: none;
-  background-color: transparent;
-}
-
-button.search:hover {
-  cursor: pointer;
-}
-
-/* music player */
-.music-player-container {
-  background: white;
-  border-radius: 15px;
-  width: 60%;
-  padding: 20px;
-  margin-top: 10px;
-  overflow: scroll;
-  overflow-x: hidden;
-  max-height: 60vh;
-  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-}
-
-.wrapper {
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  grid-auto-rows: 50px;
-  gap: 20px;
-}
-
-.box1 {
-  grid-column-start: 1;
-  grid-column-end: 2;
-  grid-row-start: 1;
-  grid-row-end: 3;
-  position: relative;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.box2 {
-  grid-column-start: 2;
-  grid-column-end: 4;
-  grid-row-start: 1;
-  grid-row-end: 2;
-  position: relative;
-  display: flex;
-  align-items: end;
-}
-
-.box3 {
-  grid-column-start: 2;
-  grid-column-end: 4;
-  grid-row-start: 2;
-  grid-row-end: 3;
-  position: relative;
-}
-
-.box4 {
-  grid-column-start: 4;
-  grid-column-end: 5;
-  grid-row-start: 1;
-  grid-row-end: 3;
-  position: relative;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.play-button-small {
-  padding: 1rem;
-  border: none;
-  color: var(--color-accent);
-  outline: none;
-  background: transparent;
-}
-
-div.wrapper:hover {
-  background-color: var(--color-gray);
-  border-radius: 10px;
-}
-
-.play-button-small:hover {
-  cursor: pointer;
-}
-
-.play-button-large {
-  border: 2px solid transparent; /* Makes the button perfectly circle */
-  border-radius: 50%;
-  line-height: 1;
-  transform: scale(1.5);
-  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-}
-
-.flex-container {
-  display: flex;
-}
-
-.next_btn {
-  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-  border: 2px solid transparent; /* Makes the button perfectly circle */
-}
-
-.prev-btn {
-  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-  border: 2px solid transparent; /* Makes the button perfectly circle */
-}
-
-.flex-container > button {
-  margin: 20px;
-  background-color: white;
-  border-radius: 50%;
-  padding: 10px;
-}
-
-.flex-container > button:hover {
-  cursor: pointer;
-}
-
-.progress-bar {
-  background-color: white;
-  width: 20em;
-  height: 5px;
-  border-radius: 25px;
-  margin: 23px;
-  position: relative;
-  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-}
-
-.progress-bar-inside {
-  background-color: #44365d;
-  position: absolute;
-  height: 5px;
-  border-radius: 25px;
 }
