--- a/src/app/home/ui/search-result/search-results.component.css
+++ b/src/app/home/ui/search-result/search-results.component.css
@@ -1,8 +1,25 @@
-/* music player */
-.music-player-container {
+::-webkit-scrollbar {
+    width: 10px;
+  }
+  
+  ::-webkit-scrollbar-thumb {
+    background: rgba(68, 54, 93, 0.3);
+    border-radius: 10px;
+    border: 2px solid white;
+  }
+  
+  ::-webkit-scrollbar-track {
+    margin: 10px;
+  }
+  
+  ::-webkit-scrollbar-thumb:hover {
+    background: #44365d;
+  }
+
+  .music-player-container {
     background: white;
     border-radius: 15px;
-    width: 60%;
+    width: 100%;
     padding: 20px;
     margin-top: 10px;
     overflow: scroll;
@@ -74,36 +91,8 @@
   .play-button-small:hover {
     cursor: pointer;
   }
+
   
-  .play-button-large {
-    border: 2px solid transparent; /* Makes the button perfectly circle */
-    border-radius: 50%;
-    line-height: 1;
-    transform: scale(1.5);
-    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-  }
+
   
-  .flex-container {
-    display: flex;
-  }
   
-  .next_btn {
-    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-    border: 2px solid transparent; /* Makes the button perfectly circle */
-  }
-  
-  .prev-btn {
-    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-    border: 2px solid transparent; /* Makes the button perfectly circle */
-  }
-  
-  .flex-container > button {
-    margin: 20px;
-    background-color: white;
-    border-radius: 50%;
-    padding: 10px;
-  }
-  
-  .flex-container > button:hover {
-    cursor: pointer;
-  }
